[ENH][FIX] Adjust content overflow when clicking on Save and comment

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -536,11 +536,13 @@ body.wikitext {
   background: #198754;
   --bs-table-bg: #198754;
   color: #aff0d2;
+  word-break: break-all;
 }
 .diffdeleted {
   background: #dc3545;
   --bs-table-bg: #dc3545;
   color: white;
+  word-break: break-all;
 }
 .diffadded a, .diffadded a:hover {
   color: white;
