--- a/themes/base_files/scss/_tiki-selectors.scss
+++ b/themes/base_files/scss/_tiki-selectors.scss
@@ -871,12 +871,14 @@ body.wikitext {
     background: $success;
     --bs-table-bg: #{$success}; // These need to be specified to override :root --bs-table-bg .
     color: lighten($success,50%);
+    word-break: break-all;
 }
 
 .diffdeleted {
     background: $danger;
     --bs-table-bg: #{$danger};
     color: lighten($danger,50%);
+    word-break: break-all;
 }
 
 .diffadded a,
